--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "react-dark-mode-toggle": "^0.2.0",
     "react-dom": "^18.3.1",
     "react-fast-marquee": "^1.6.5",
-    "react-helmet": "^6.1.0",
+    "react-helmet-async": "^2.0.5",
     "react-hot-toast": "^2.5.1",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.1",
