--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
     "aos": "^2.3.4",
+    "framer-motion": "^12.10.2",
     "localforage": "^1.10.0",
     "locomotive-scroll": "^5.0.0-beta.21",
     "lottie-react": "^2.4.0",
@@ -22,7 +23,7 @@
     "react-fast-marquee": "^1.6.5",
     "react-helmet-async": "^2.0.5",
     "react-hot-toast": "^2.5.1",
-    "react-icons": "^5.4.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.1.1",
     "react-scroll": "^1.9.0",
     "react-simple-typewriter": "^5.0.1",
